--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <header>
         <div>
           <h1>Best place to learn frontend</h1>
-          <p>Go from absolute beginner to pro with a simplified process</p>
+          <p class="subheader">Go from absolute beginner to pro with a simplified process</p>
           <button>Start now</button>
         </div>
         <figure>
