fifth commit 15min

--- a/index.html
+++ b/index.html
@@ -17,37 +17,41 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
+
       <header>
-        <div>
-          <h1>Best place to learn frontend</h1>
-          <p class="subheader">Go from absolute beginner to pro with a simplified process</p>
-          <button>Start now</button>
+        <div class="row">
+          <div>
+            <h1>Best place to learn frontend</h1>
+            <p class="subheader">Go from absolute beginner to pro with a simplified process</p>
+            <button>Start now</button>
+          </div>
+          <figure>
+            <img src="HTML Practise Assets/laptop.png" alt="Home page image" />
+          </figure>
         </div>
-        <figure>
-          <img src="HTML Practise Assets/laptop.png" alt="Home page image" />
-        </figure>
       </header>
     </section>
 
     <main>
       <section id="about">
         <h2>About</h2>
-        <div>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis
-            unde natus soluta quisquam qui molestias! Autem explicabo veritatis
-            quia officiis ea inventore aperiam excepturi suscipit minima? Quas
-            expedita eum dolorem.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo error
-            nostrum doloremque ad voluptates rerum. Odio natus tempora, facilis
-            consectetur quos, vel ex eos quod sed sint ipsa eius optio!
-          </p>
+        <div class="aboutitems">
+          <div class="aboutleft">
+            <p class="section__description--para">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis
+              unde natus soluta quisquam qui molestias! Autem explicabo veritatis
+              quia officiis.
+            </p>
+            <p class="section__description--para" >
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo error
+              nostrum doloremque ad voluptates rerum. Odio natus tempora, facilis
+              consectetur quos.
+            </p>
+          </div>
+          <figure class="aboutright">
+            <img src="HTML Practise Assets/about.jpg" class="aboutimage" alt="" />
+          </figure>
         </div>
-        <figure>
-          <img src="HTML Practise Assets/about.jpg" alt="" />
-        </figure>
       </section>
 
       <section id="discord">
