--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <main>
       <section id="about">
         <h2>About</h2>
-        <div class="aboutitems">
-          <div class="aboutleft">
+        <div class="items">
+          <div class="itemsleft">
             <p class="section__description--para">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis
               unde natus soluta quisquam qui molestias! Autem explicabo veritatis
@@ -48,29 +48,29 @@
               consectetur quos.
             </p>
           </div>
-          <figure class="aboutright">
-            <img src="HTML Practise Assets/about.jpg" class="aboutimage" alt="" />
+          <figure class="itemsright">
+            <img src="HTML Practise Assets/about.jpg" class="itemsimage" alt="" />
           </figure>
         </div>
       </section>
 
       <section id="discord">
         <h2>Discord</h2>
-        <figure>
-          <img src="HTML Practise Assets/discord.png" alt="" />
-        </figure>
-        <div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-            architecto accusamus earum veniam repellat totam ipsa, hic ut
-            cupiditate aliquam facere eveniet cumque ducimus nesciunt omnis, sit
-            expedita! Aliquam, harum!
-          </p>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et illum
-            error pariatur! Est ipsa quae delectus, consequatur in, iusto impedit,
-            at magnam ipsum aliquid voluptate aut excepturi hic nemo voluptates.
-          </p>
+        <div class="items">
+          <figure class="itemsleft discleft">
+            <img src="HTML Practise Assets/discord.png" class="itemsimage discimage"  alt="" />
+          </figure>
+          <div class="itemsright">
+            <p class="section__description--para">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+              architecto accusamus earum veniam repellat totam ipsa, hic ut
+              cupidi.
+            </p>
+            <p class="section__description--para">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et illum
+              error pariatur! Est ipsa quae delectus, consequatur in.
+            </p>
+          </div>
         </div>
       </section>
 
