--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <section>
@@ -22,7 +22,9 @@
         <div class="row">
           <div>
             <h1>Best place to learn frontend</h1>
-            <p class="subheader">Go from absolute beginner to pro with a simplified process</p>
+            <p class="subheader">
+              Go from absolute beginner to pro with a simplified process
+            </p>
             <button>Start now</button>
           </div>
           <figure>
@@ -38,18 +40,22 @@
         <div class="items">
           <div class="itemsleft">
             <p class="section__description--para">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis
-              unde natus soluta quisquam qui molestias! Autem explicabo veritatis
-              quia officiis.
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Reiciendis unde natus soluta quisquam qui molestias! Autem
+              explicabo veritatis quia officiis.
             </p>
-            <p class="section__description--para" >
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo error
-              nostrum doloremque ad voluptates rerum. Odio natus tempora, facilis
-              consectetur quos.
+            <p class="section__description--para">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo
+              error nostrum doloremque ad voluptates rerum. Odio natus tempora,
+              facilis consectetur quos.
             </p>
           </div>
           <figure class="itemsright">
-            <img src="HTML Practise Assets/about.jpg" class="itemsimage" alt="" />
+            <img
+              src="HTML Practise Assets/about.jpg"
+              class="itemsimage"
+              alt=""
+            />
           </figure>
         </div>
       </section>
@@ -58,7 +64,11 @@
         <h2>Discord</h2>
         <div class="items">
           <figure class="itemsleft discleft">
-            <img src="HTML Practise Assets/discord.png" class="itemsimage discimage"  alt="" />
+            <img
+              src="HTML Practise Assets/discord.png"
+              class="itemsimage discimage"
+              alt=""
+            />
           </figure>
           <div class="itemsright">
             <p class="section__description--para">
@@ -78,16 +88,20 @@
         <h2>Contact</h2>
         <form action="">
           <label for="Email">Email</label>
-          <input type="text" placeholder="jane@example.com">
+          <input type="email" placeholder="jane@example.com" />
           <label for="Message">Message</label>
-          <textarea type="text" placeholder="jane@example.com"></textarea>
+          <textarea
+            type="text"
+            placeholder="Cool website, let's connect!"
+          ></textarea>
         </form>
+        <button>Contact us!</button>
       </section>
     </main>
 
     <footer>
-      <img src="HTML Practise Assets/FES.svg" alt="">
-      <div>
+      <img src="HTML Practise Assets/FES.svg" alt="" class="footerlogo" />
+      <div class="footerlinks">
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#discord">Discord</a></li>
@@ -95,8 +109,7 @@
           <li><a href="">Courses</a></li>
         </ul>
       </div>
-      <p>Copyright Frontend Simplified.</p>
+      <p class="copyright">Copyright Frontend Simplified.</p>
     </footer>
-
   </body>
 </html>
