--- a/index.html
+++ b/index.html
@@ -37,49 +37,53 @@
     <main>
       <section id="about">
         <h2>About</h2>
-        <div class="items">
-          <div class="itemsleft">
-            <p class="section__description--para">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Reiciendis unde natus soluta quisquam qui molestias! Autem
-              explicabo veritatis quia officiis.
-            </p>
-            <p class="section__description--para">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo
-              error nostrum doloremque ad voluptates rerum. Odio natus tempora,
-              facilis consectetur quos.
-            </p>
+        <div class="row">
+          <div class="items">
+            <div class="itemsleft">
+              <p class="section__description--para">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Reiciendis unde natus soluta quisquam qui molestias! Autem
+                explicabo veritatis quia officiis.
+              </p>
+              <p class="section__description--para">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo
+                error nostrum doloremque ad voluptates rerum. Odio natus tempora,
+                facilis consectetur quos.
+              </p>
+            </div>
+            <figure class="itemsright">
+              <img
+                src="HTML Practise Assets/about.jpg"
+                class="itemsimage"
+                alt=""
+              />
+            </figure>
           </div>
-          <figure class="itemsright">
-            <img
-              src="HTML Practise Assets/about.jpg"
-              class="itemsimage"
-              alt=""
-            />
-          </figure>
         </div>
       </section>
 
       <section id="discord">
         <h2>Discord</h2>
-        <div class="items">
-          <figure class="itemsleft discleft">
-            <img
-              src="HTML Practise Assets/discord.png"
-              class="itemsimage discimage"
-              alt=""
-            />
-          </figure>
-          <div class="itemsright">
-            <p class="section__description--para">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-              architecto accusamus earum veniam repellat totam ipsa, hic ut
-              cupidi.
-            </p>
-            <p class="section__description--para">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et illum
-              error pariatur! Est ipsa quae delectus, consequatur in.
-            </p>
+        <div class="row">
+          <div class="items">
+            <figure class="itemsleft discleft">
+              <img
+                src="HTML Practise Assets/discord.png"
+                class="itemsimage discimage"
+                alt=""
+              />
+            </figure>
+            <div class="itemsright">
+              <p class="section__description--para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+                architecto accusamus earum veniam repellat totam ipsa, hic ut
+                cupidi.
+              </p>
+              <p class="section__description--para">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et illum
+                error pariatur! Est ipsa quae delectus, consequatur in.
+              </p>
+            </div>
           </div>
         </div>
       </section>
