--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 
       <header>
         <div class="row">
-          <div>
+          <div class="itemsleft">
             <h1>Best place to learn frontend</h1>
             <p class="subheader">
               Go from absolute beginner to pro with a simplified process
             </p>
-            <button>Start now</button>
+            <button class="homebutton">Start now</button>
           </div>
-          <figure>
-            <img src="HTML Practise Assets/laptop.png" alt="Home page image" />
+          <figure class="itemsright">
+            <img src="HTML Practise Assets/laptop.png" alt="Home page image" class="itemsimage" />
           </figure>
         </div>
       </header>
