last commt for practices

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section>
       <nav>
         <img src="HTML Practise Assets/FES.svg" class="logo" alt="" />
-        <ul>
+        <ul class="nav_ul">
           <li><a href="#about">About</a></li>
           <li><a href="#discord">Discord</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -106,11 +106,11 @@
     <footer>
       <img src="HTML Practise Assets/FES.svg" alt="" class="footerlogo" />
       <div class="footerlinks">
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#discord">Discord</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li><a href="">Courses</a></li>
+        <ul id="footer">
+          <li><a href="#about" class="endlink">About</a></li>
+          <li><a href="#discord" class="endlink">Discord</a></li>
+          <li><a href="#contact" class="endlink">Contact</a></li>
+          <li><a href="" class="endlink">Courses</a></li>
         </ul>
       </div>
       <p class="copyright">Copyright Frontend Simplified.</p>
